# restapi-echo-server

./: .gitignore  LICENSE  README.md  pyproject.toml
src/restapi_echo_server/: __main__.py  server.py
