[tool.poetry]
name = "restapi-echo-server"
version = "0.4.0"
description = "Simple REST-API echo server"
authors = ["dei"]
readme = "README.md"
keywords = ["rest-api", "echo"]
license = "MIT"
repository = "https://github.com/kthrdei/restapi-echo-server"
homepage = "https://github.com/kthrdei/restapi-echo-server"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
